# openclaw-node

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
client/: README.md  __init__.py  config.py  main.py  node_config.example.yaml  plugin_loader.py  requirements.txt  service.py  websocket_client.py
plugins/: README.md  __init__.py  base.py  explorer.py  nuke.py  resolve.py  rv.py  shotgrid.py
server/: README.md  __init__.py  api.py  auth.py  client_registry.py  command_router.py  main.py  requirements.txt  websocket_server.py
server/auth_providers/: __init__.py  base.py  oauth.py  token.py
tests/: __init__.py  conftest.py  test_api.py  test_auth_providers.py  test_command_router.py  test_plugins.py
